--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+	overflow-y: scroll;
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -77,11 +81,21 @@ button {
 	border-radius: 10px;
 	position: relative;
 	animation: fadeIn 0.4s ease;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+	white-space: normal;
+	width: 100%;
 }
+
+	.note-text {
+		white-space: normal; /* Переносим текст */
+		display: block;
+		padding-right: 30px;
+	}
 
 	.note .delete-btn {
 		position: absolute;
-		top: 10px;
+		top: 0px;
 		right: 10px;
 		background: transparent;
 		color: #ff4d4d;
@@ -89,6 +103,24 @@ button {
 		font-size: 1.2rem;
 		cursor: pointer;
 	}
+
+#export-notes,
+#import-notes {
+	background: #444;
+	color: white;
+	padding: 10px;
+	margin-top: 10px;
+	border: none;
+	border-radius: 8px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+	#export-notes:hover,
+	#import-notes:hover {
+		background: #666;
+	}
+
 
 #loader {
 	text-align: center;
